--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "budget-app",
-    "slug": "budget-app",
+    "slug": "budgetai",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +25,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "owner": "your-expo-username",
+    "scheme": "budgetai",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ]
   }
 }
